[package]
name = "chip-8-emulator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
strip = true  # Automatically strip symbols from the binary.
lto = true
codegen-units = 1

[profile.dev.package.'*']
opt-level = 3

[[bin]]
name = "chip8"
path = "src/main.rs"

[dependencies]
clap = { version = "3.2.16", features = ["derive"] }
macroquad = "0.3"
rand = "0.8.5"
